syntax = "proto3";

package user;

message UserToken {
    string token = 1;
}

message UserRequest {
    string email = 1;
    string password = 2;
}

message Authenticated {
    bool isAuth = 1;
}

service User {
    rpc Register(UserRequest) returns (UserToken) {};
    rpc Login(UserRequest) returns (UserToken) {};
    rpc Auth(UserToken) returns (Authenticated) {};
}